--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -71,7 +71,7 @@
                         &lt;!&ndash;<json child="p" default-collapsed="true" type="object"></json>&ndash;&gt;
                     </form>
                 </div>
-            </div>&ndash;&gt;
+            </div>;&gt;
             <div class="row" ng-show=true>
                 <div class="col-sm-3" ng-show=true></div>
                 <div class="col-sm-3" ng-show=true>labels</div>
@@ -94,8 +94,8 @@
 
     <div class="row" ng-if="podsReady">
         <table  ng-table="podc.tableParams" class="table table-bordered table-responsive" show-filter="true">
-            <tr  ng-repeat="p in pods">
-                <td ng-click="showpod=!showpod; editPod(p.id, p.pod);"   title="'Name'" filter="{ name: 'text'}" sortable="'name'">
+            <tr  ng-repeat="p in $data">
+                <td ng-click="showpod=!showpod; editPod(p.id, p.pod);"   title="'Name'" filter="{ name: 'text'}" sortable="'pod.metadata.name'">
                     {{p.pod.metadata.name}}
 
 
@@ -114,16 +114,14 @@
                     </div>
 
                 </td>
-                <td title="'Namespace'" filter="{ age: 'text'}" sortable="'namespace'">
+                <td title="'Namespace'" filter="{ age: 'text'}" sortable="'pod.metadata.namespace'">
                     {{p.pod.metadata.namespace}}
-                    </br>   <span>Labels</span>
 
 
                 </td>
-                <td title="'Status'" filter="{ status: 'text'}" sortable="'phase'">
-                    {{p.pod.status.phase}}
 
-                    </br>
+
+                <td title="'Labels'" filter="{ age: 'text'}" sortable="'pod.metadata.labels'">
                     <span ng-hide="editing" ng-click="editing = true; setLabelStr(p.pod.metadata.labels);">{{p.pod.metadata.labels}}</span>
 
                     <form ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, p.pod.metadata.name);">
@@ -133,6 +131,17 @@
                         <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
                         <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
                     </form>
+
+                </td>
+
+
+
+
+                <td title="'Status'" filter="{ status: 'text'}" sortable="'pod.status.phase'">
+                    {{p.pod.status.phase}}
+
+                    </br>
+
 
                 </td>
                 <td class="table-actions" title="'Actions'">
