--- a/views/k8s/services.html
+++ b/views/k8s/services.html
@@ -14,8 +14,8 @@
    limitations under the License.
 -->
 <section ng-controller="servicesController as servicesco">
-    <div class="row" style="text-align: right" ng-click="newService=!newService">
-        <i class="btn btn-success fa fa-plus"> New </i>
+    <div class="row" style="text-align: right" >
+        <span ng-click="newService=!newService"><i class="btn btn-success fa fa-plus"> New </i></span>
     </div>
 
     <div class="row">
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="row" ng-if="servicesReady">
+    <div class="row">
     <table  ng-table="servicesco.tableParams" class="table table-bordered table-responsive" show-filter="true">
         <tr ng-repeat="s in $data">
             <td  title="'Name'" filter="{ name: 'text'}" sortable="'service.metadata.name'">
