--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -24,81 +24,20 @@
                 <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid"
                          ></textarea>
                 <br/>
-                <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                <a class="cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></a>
                 <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
 
             </form>
         </div>
     </div>
-   <!-- <div class="row">
-        <div class="col-sm-3"><b>Name</b></div>
-        <div class="col-sm-3"><b>Namespace</b></div>
-        <div class="col-sm-3"><b>Status</b></div>
-        <div class="col-sm-3"><b>Actions</b></div>
-    </div>
-    <hr/>
-    <div class="row" ng-if="podsReady">
-        <div ng-repeat="p in pods">
-            <div ng-class="{gray: hover}" ng-mouseenter="hover=true" ng-mouseleave="hover=false"
-                 class="row">
-                <div class="col-sm-3" ng-click="showpod=!showpod; editPod(p.id, p.pod);" ng-show=true>
-                    {{p.pod.metadata.name}}
-                </div>
-                <div class="col-sm-3" ng-show=true>{{p.pod.metadata.namespace}}</div>
-                <div class="col-sm-3" ng-show=true>{{p.pod.status.phase}}</div>
-                <div class="col-sm-3" ng-show=true>
-                    <a ng-click="editPressed=!editPressed;editPod(p.id, p.pod);" class="btn btn-info" title="Edit"> <i
-                            class="fa fa-edit"></i></a>
-                    &lt;!&ndash;<a ng-click="start(p.pod.metadata.name);" class="" title="start"> <i&ndash;&gt;
-                    &lt;!&ndash;class="fa fa-play"></i></a>&ndash;&gt;
-                    &lt;!&ndash;<a ng-click="stop(p.pod.metadata.name);" class="" title="stop"> <i&ndash;&gt;
-                    &lt;!&ndash;class="fa fa-stop"></i></a>&ndash;&gt;
-                    <a ng-click="delete(p.pod.metadata.name);" class="btn btn-warning" title="delete"> <i
-                            class="fa fa-trash"></i></a>
-                </div>
-            </div>
-          &lt;!&ndash;  <div class="row">
-                <div class="col-sm-12" ng-if="(showpod || editPressed) && pStr">
-                    <form ng-show="{{p.id}} && pStr"
-                          ng-submit="updatePod(p.id, pStr, p.pod.metadata.name);">
-                        <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid"
-                                  ng-disabled="!editPressed"></textarea>
-                        <span ng-show="editPressed">
-                        <br/>
-                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
-                        <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
-                            </span>
-                        &lt;!&ndash;<json child="p" default-collapsed="true" type="object"></json>&ndash;&gt;
-                    </form>
-                </div>
-            </div>;&gt;
-            <div class="row" ng-show=true>
-                <div class="col-sm-3" ng-show=true></div>
-                <div class="col-sm-3" ng-show=true>labels</div>
-                <div class="col-sm-6" ng-show=true>
-                    <span ng-hide="editing" ng-click="editing = true; setLabelStr(p.pod.metadata.labels);">{{p.pod.metadata.labels}}</span>
 
-                    <form ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, p.pod.metadata.name);">
-                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"
-                                  ng-required></textarea>
-                        <br/>
-                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
-                        <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
-                    </form>
-                </div>
-            </div>
-            <hr/>
-        </div>
-    </div>-->
 
 
     <div class="row" ng-if="podsReady">
         <table  ng-table="podc.tableParams" class="table table-bordered table-responsive" show-filter="true">
             <tr  ng-repeat="p in $data">
-                <td ng-click="showpod=!showpod; editPod(p.id, p.pod);"   title="'Name'" filter="{ name: 'text'}" sortable="'pod.metadata.name'">
-                    {{p.pod.metadata.name}}
-
-
+                <td title="'Name'" filter="{ name: 'text'}" sortable="'pod.metadata.name'">
+                    <span ng-click="showpod=!showpod; editPod(p.id, p.pod);"> {{p.pod.metadata.name}} </span>
                     <div  ng-if="(showpod || editPressed) && pStr">
                         <form ng-show="{{p.id}} && pStr"
                               ng-submit="updatePod(p.id, pStr, p.pod.metadata.name);">
@@ -106,7 +45,7 @@
                                       ng-disabled="!editPressed"></textarea>
                         <span ng-show="editPressed">
                         <br/>
-                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                        <a class="cancel_button"  ng-click="cancelBtn();"><i class="glyphicon glyphicon-remove"> </i></a>
                         <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
                             </span>
                             <!--<json child="p" default-collapsed="true" type="object"></json>-->
@@ -116,11 +55,7 @@
                 </td>
                 <td title="'Namespace'" filter="{ age: 'text'}" sortable="'pod.metadata.namespace'">
                     {{p.pod.metadata.namespace}}
-
-
                 </td>
-
-
                 <td title="'Labels'" filter="{ age: 'text'}" sortable="'pod.metadata.labels'">
                     <span ng-hide="editing" ng-click="editing = true; setLabelStr(p.pod.metadata.labels);">{{p.pod.metadata.labels}}</span>
 
@@ -139,10 +74,6 @@
 
                 <td title="'Status'" filter="{ status: 'text'}" sortable="'pod.status.phase'">
                     {{p.pod.status.phase}}
-
-                    </br>
-
-
                 </td>
                 <td class="table-actions" title="'Actions'">
                     <a ng-click="editPressed=!editPressed;editPod(p.id, p.pod);" class="btn btn-info" title="Edit"> <i
