--- a/views/k8s/rc.html
+++ b/views/k8s/rc.html
@@ -31,8 +31,7 @@
         </div>
     </div>
 
-
-    <div class="row" ng-if="rcsReady">
+    <div class="row" >
         <table  ng-table="rcc.tableParams" class="table table-bordered table-responsive" show-filter="true">
             <tr  ng-repeat="r in $data">
                 <td title="'Name'" filter="{ name: 'text'}" sortable="'rc.metadata.name'">
@@ -83,8 +82,6 @@
                     <a ng-click="delete(r.rc.metadata.name);showrc=!showrc" class="btn btn-warning" title="delete"> <i
                             class="fa fa-trash"></i></a>
                 </td>
-
-
             </tr>
         </table>
     </div>
