--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -14,14 +14,14 @@
    limitations under the License.
 -->
 <section ng-controller="podController as podc">
-    <div class="row" style="text-align: right" ng-click="newPod=!newPod">
-        <i class="btn btn-success fa fa-plus"> New </i>
+    <div class="row" style="text-align: right">
+     <a  ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> New </i></a>
     </div>
 
     <div class="row">
         <div class="col-sm-12" ng-if="newPod">
             <form ng-submit="createPod(npStr);">
-                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid"
+                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control"
                          ></textarea>
                 <br/>
                 <a class="cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></a>
@@ -37,11 +37,11 @@
         <table  ng-table="podc.tableParams" class="table table-bordered table-responsive" show-filter="true">
             <tr  ng-repeat="p in $data">
                 <td title="'Name'" filter="{ name: 'text'}" sortable="'pod.metadata.name'">
-                    <span ng-click="showpod=!showpod; editPod(p.id, p.pod);"> {{p.pod.metadata.name}} </span>
+                    <span  class="click_item" ng-click="showpod=!showpod; editPod(p.id, p.pod);"> {{p.pod.metadata.name}} </span>
                     <div  ng-if="(showpod || editPressed) && pStr">
                         <form ng-show="{{p.id}} && pStr"
                               ng-submit="updatePod(p.id, pStr, p.pod.metadata.name);">
-                            <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid"
+                            <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid  form-control"
                                       ng-disabled="!editPressed"></textarea>
                         <span ng-show="editPressed">
                         <br/>
@@ -57,10 +57,10 @@
                     {{p.pod.metadata.namespace}}
                 </td>
                 <td title="'Labels'" filter="{ age: 'text'}" sortable="'pod.metadata.labels'">
-                    <span ng-hide="editing" ng-click="editing = true; setLabelStr(p.pod.metadata.labels);">{{p.pod.metadata.labels}}</span>
+                    <span  class="click_item" ng-hide="editing" ng-click="editing = true; setLabelStr(p.pod.metadata.labels);">{{p.pod.metadata.labels}}</span>
 
                     <form ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, p.pod.metadata.name);">
-                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"
+                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid  form-control"
                                   ng-required></textarea>
                         <br/>
                         <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
