--- a/views/k8s/rc.html
+++ b/views/k8s/rc.html
@@ -14,14 +14,14 @@
    limitations under the License.
 -->
 <section ng-controller="rcController as rcc">
-    <div class="row" style="text-align: right" ng-click="newRc=!newRc">
-        <i class="btn btn-success fa fa-plus"> New </i>
+    <div class="row" style="text-align: right" >
+       <a ng-click="newRc=!newRc"> <i class="btn btn-success fa fa-plus"> New </i> </a>
     </div>
 
     <div class="row">
         <div class="col-sm-12" ng-if="newRc">
             <form ng-submit="createRc(npStr);">
-                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid"
+                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control"
                         ></textarea>
                 <br/>
                 <a class="cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></a>
@@ -35,12 +35,12 @@
         <table  ng-table="rcc.tableParams" class="table table-bordered table-responsive" show-filter="true">
             <tr  ng-repeat="r in $data">
                 <td title="'Name'" filter="{ name: 'text'}" sortable="'rc.metadata.name'">
-                    <span  ng-click="showrc=!showrc;editRc(r.id, r.rc);">{{r.rc.metadata.name}}</span>
+                    <span class="click_item"  ng-click="showrc=!showrc;editRc(r.id, r.rc);">{{r.rc.metadata.name}}</span>
 
-                    <div class="col-sm-12" ng-if="(showrc || editPressed) && pStr">
+                    <div class="edit_row col-sm-12" ng-if="(showrc || editPressed) && pStr">
                         <form ng-show="{{r.id}} && pStr"
                               ng-submit="updateRc(r.id, pStr, r.rc.metadata.name);">
-                            <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid"
+                            <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid form-control"
                                       ng-disabled="!editPressed"></textarea>
                         <span ng-show="editPressed">
                         <br/>
@@ -55,20 +55,20 @@
                      <span>{{r.rc.metadata.namespace}}</span>
                 </td>
                 <td title="'Labels'" filter="{ labels: 'text'}" sortable="'pod.metadata.name'">
-                    <span ng-hide="editingLabel" ng-click="editingLabel = true; setLabelStr(r.rc.metadata.labels);">{{r.rc.metadata.labels}}</span>
+                    <span  class="click_item"  ng-hide="editingLabel" ng-click="editingLabel = true; setLabelStr(r.rc.metadata.labels);">{{r.rc.metadata.labels}}</span>
 
                     <form ng-show="editingLabel" ng-submit="editingLabel = false;updateLabel(labelStr, r.rc.metadata.name);">
-                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"  ng-required></textarea>
+                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid form-control"  ng-required></textarea>
                         <br/>
                         <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
                         <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>                    </form>
 
                 </td>
                 <td title="'Replicas'" filter="{ replicas: 'text'}" sortable="'rc.spec.replicas'">
-                    <span  ng-hide="editing" ng-click="editing = true">{{r.rc.spec.replicas}}</span>
+                    <span  class="click_item"   ng-hide="editing" ng-click="editing = true">{{r.rc.spec.replicas}}</span>
                     <form ng-show="editing" ng-submit="editing = false;updateReplica(replicaCnt, r.rc.metadata.name);">
-                        <input type="Number" ng-model="replicaCnt" placeholder="{{r.rc.spec.replicas}}" ng-required/>
-                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                        <input type="Number" class="form-control" ng-model="replicaCnt" placeholder="{{r.rc.spec.replicas}}" ng-required/>
+                        <br/><button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
                         <button class="btn-small btn-success" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
                     </form>
                 </td>
