Search ,  dropdown alignment

--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@ body {
     padding-top: 50px;
 }
 #container {
-    padding: 39px 0px;
+    padding:0px 0px;
 }
 .gray {
   color: gray;
@@ -66,3 +66,20 @@ border: 1px solid #9E9E9E;
 border-radius: 3px;
 }
 .click_item { cursor:pointer;}
+
+.header-search { display: inline-block;
+    float: right;
+    margin: 10px 0px;
+    background: #000; }
+
+.header-search input {
+background: rgba(255, 255, 255, 1);
+border: 1px solid rgba(134, 134, 134, 1);
+box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.74) inset; padding: 4px 6px;
+}
+
+.header_dropdown {
+float: right;
+margin: 20px 0px;
+padding: 6px 10px;
+}
