--- a/views/header.html
+++ b/views/header.html
@@ -47,16 +47,24 @@
                 </li>
 
             </ul>
-            <select class="btn-info" name="singleSelect" ng-model="selected_context" ng-change="changeContext(selected_context)" ng-init="contexts[0].name">
-                <option ng-repeat="c in contexts" value="{{c.name}}">{{c.name}}</option>
-            </select>
 
+            <div class="pull-right header-search">
             <form ng-submit="searchString(search)">
-                <input type="text" ng-model="search">
+                <input type="text" ng-model="search" placeholder="search">
             </form>
+            </div>
 
 
         </div>
 
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-sm-12"></div>
+<select class="btn-info header_dropdown" name="singleSelect" ng-model="selected_context" ng-change="changeContext(selected_context)" ng-init="contexts[0].name">
+    <option ng-repeat="c in contexts" value="{{c.name}}">{{c.name}}</option>
+</select>
     </div>
 </div>
