--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -15,7 +15,7 @@
 -->
 <section ng-controller="podController as podc">
     <div class="row" style="text-align: right">
-     <a  ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> New </i></a>
+     <a class="addBtn-row"  ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> New </i></a>
     </div>
 
     <div class="row">
@@ -38,7 +38,7 @@
             <tr  ng-repeat="p in $data ">
                 <td title="'Name'" filter="{ name: 'text'}" sortable="'pod.metadata.name'">
                     <span  class="click_item" ng-click="showpod=!showpod; editPod(p.id, p.pod);"> {{p.pod.metadata.name}} </span>
-                    <div  ng-if="(showpod || editPressed) && pStr">
+                    <div class="editBox"  ng-if="(showpod || editPressed) && pStr">
                         <form ng-show="{{p.id}} && pStr"
                               ng-submit="updatePod(p.id, pStr, p.pod.metadata.name);">
                             <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid  form-control"
