--- a/views/k8s/services.html
+++ b/views/k8s/services.html
@@ -15,7 +15,7 @@
 -->
 <section ng-controller="servicesController as servicesco">
     <div class="row" style="text-align: right" >
-        <span ng-click="newService=!newService"><i class="btn btn-success fa fa-plus"> New </i></span>
+        <a  class="addBtn-row"   ng-click="newService=!newService"><i class="btn btn-success fa fa-plus"> New </i></a>
     </div>
 
     <div class="row">
