--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -20,15 +20,21 @@
 
     <div class="row">
         <div class="col-sm-12" ng-if="newPod">
-            <form ng-submit="createPod(npStr);">
+            <form ng-submit="createPod(npStr, yaml);">
                 <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control"
                          ></textarea>
+                <span style="float: right"> <input type="checkbox"
+                       ng-model="yaml"
+                       name="yaml"
+                        > YAML</span>
                 <br/>
                 <a class="cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></a>
                 <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
 
             </form>
+
         </div>
+
     </div>
 
 
