--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -15,7 +15,7 @@
 -->
 <section ng-controller="podController as podc">
     <div class="row" style="text-align: right">
-     <a class="addBtn-row"  ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> New </i></a>
+     <a class="addBtn-row"  ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> Create Pod </i></a>
     </div>
 
     <div class="row">
