--- a/views/k8s/rc.html
+++ b/views/k8s/rc.html
@@ -15,7 +15,7 @@
 -->
 <section ng-controller="rcController as rcc">
     <div class="row" style="text-align: right" >
-       <a class="addBtn-row"   ng-click="newRc=!newRc"> <i class="btn btn-success fa fa-plus"> New </i> </a>
+       <a class="addBtn-row"   ng-click="newRc=!newRc"> <i class="btn btn-success fa fa-plus"> Create RC </i> </a>
     </div>
 
     <div class="row">
