--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -65,9 +65,11 @@
                 <td title="'Labels'" filter="{ age: 'text'}" sortable="'pod.metadata.labels'">
                     <span  class="click_item" ng-hide="editing" ng-click="editing = true; setLabelStr(p.pod.metadata.labels);">{{p.pod.metadata.labels}}</span>
 
-                    <form ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, p.pod.metadata.name);">
-                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid  form-control"
-                                  ng-required></textarea>
+                    <form ng-if="editing" ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, p.pod.metadata.name);">
+                        <!--<textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid  form-control"-->
+                                  <!--ng-required></textarea>-->
+                        <labelformat  labeltext="labelStr"/>
+
                         <br/>
                         <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
                         <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
