--- a/css/app.css
+++ b/css/app.css
@@ -85,3 +85,86 @@ padding: 6px 10px;
 }
 .addBtn-row  {  display: inline-block;
 margin: 0px 0px 16px; }
+.label-div{
+    display: block;
+    margin: 10px 0px 0px;
+}
+.label_text {
+    display: inline-block;
+    background: #ECECEC;
+    padding: 0px;
+    margin: 0px 0px 0px 6px;
+    border: 1px solid #E2E2E2;
+}
+.label_text span{
+    margin: 6px;
+}
+.label_text i{ cursor: pointer;
+    margin: 0px 0px 0px 4px;
+    background: #DDD;
+    padding: 6px 5px;
+    color: #737373;
+    font-weight: normal;
+    font-size: 12px; }
+.labelSection { display: inline-block;}
+.addLabel_btn {   font-size: 12px;
+    padding: 4px 4px;
+    display: inline-block;
+    background: #5BC0DE;
+    color: #FFf;
+    margin: -1px 0px 0px 0px;
+    border: 1px solid #5BC0DE;
+    border-bottom: none;  }
+
+
+
+.addLabel_btn   i {
+    margin: 0px 6px 0px 2px;  }
+.addLablel_div { margin:10px 0px; padding: 0px; }
+.addLablel_div .btn.btn-mini { margin:10px 0px}
+
+textarea.edit_textarea{
+    width: 800px;
+    height: 150px
+}
+
+@media (max-width: 800px) {
+    .textarea.edit_textarea{ width: 700px;
+        height: 150px   }
+}
+
+@media (max-width: 700px) {
+    .textarea.edit_textarea{ width: 600px;
+        height: 150px   }
+}
+
+
+@media (max-width: 600px) {
+    .edit_textarea{ width: 500px;
+        height: 150px   }
+}
+
+
+
+@media (max-width: 500px) {
+    .textarea.edit_textarea{ width: 400px;
+        height: 150px   }
+}
+
+
+
+@media (max-width: 400px) {
+    .textarea.edit_textarea{ width: 300px;
+        height: 150px   }
+}
+
+
+
+.labelSection { width:100%; display: block;}
+.add_label_btn1{   position: relative;
+    right: 10px;
+    float: right;
+    z-index: 999;
+    margin: -34px -9px !important;
+    display: inline-block; }
+.labelSection  .form-control:focus, .labelSection  .form-control:hover{ outline:none; box-shadow: none}
