--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -20,9 +20,10 @@
 
     <div class="row">
         <div class="col-sm-12" ng-if="newPod">
+
             <form ng-submit="createPod(npStr, yaml);">
-                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control "
-                         ></textarea>
+                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control edit_textarea"
+                          placeholder="Pod Definition in JSON or YAML format." ></textarea>
                 <span style="float: right"> <input type="checkbox"
                        ng-model="yaml"
                        name="yaml"
@@ -32,23 +33,21 @@
                 <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
 
             </form>
-
         </div>
-
     </div>
 
-
-
     <div class="row" ng-if="podsReady">
-        <table  ng-table="podc.tableParams" class="table table-bordered table-responsive" show-filter="true">
+        <table  ng-table="podc.tableParams" class="table table-bordered table-responsive table-hover" show-filter="true">
             <tr  ng-repeat="p in $data ">
                 <td title="'Name'" filter="{ name: 'text'}" sortable="'pod.metadata.name'">
                     <span  class="click_item" ng-click="showpod=!showpod; editPod(p.id, p.pod);"> {{p.pod.metadata.name}} </span>
-                    <div class="editBox"  ng-if="(showpod || editPressed) && pStr">
+                    <div class="edit_row col-sm-12"  ng-if="(showpod || editPressed) && pStr">
                         <form ng-show="{{p.id}} && pStr"
                               ng-submit="updatePod(p.id, pStr, p.pod.metadata.name);">
-                            <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid  form-control"
-                                      ng-disabled="!editPressed"></textarea>
+                        <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid form-control edit_textarea"
+                                      ng-disabled="!editPressed"
+                                placeholder="Pod Definition in JSON or YAML format." >
+                            </textarea>
                         <span ng-show="editPressed">
                         <br/>
                         <a class="cancel_button"  ng-click="cancelBtn();"><i class="glyphicon glyphicon-remove"> </i></a>
@@ -57,32 +56,20 @@
                             <!--<json child="p" default-collapsed="true" type="object"></json>-->
                         </form>
                     </div>
-
                 </td>
-                <td title="'Namespace'" filter="{ age: 'text'}" sortable="'pod.metadata.namespace'">
+                <td title="'Namespace'" filter="{ namespace: 'text'}" sortable="'pod.metadata.namespace'">
                     {{p.pod.metadata.namespace}}
                 </td>
-                <td title="'Labels'" filter="{ age: 'text'}" sortable="'pod.metadata.labels'">
-                    <span  class="click_item" ng-hide="editing" ng-click="editing = true; setLabelStr(p.pod.metadata.labels);">{{p.pod.metadata.labels}}</span>
-
-                    <form ng-if="editing" ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, p.pod.metadata.name);">
-                        <!--<textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid  form-control"-->
-                                  <!--ng-required></textarea>-->
-                        <labelformat  labeltext="labelStr"/>
-
-                        <br/>
-                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
-                        <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
-                    </form>
-
-                </td>
-
-
-
 
                 <td title="'Status'" filter="{ status: 'text'}" sortable="'pod.status.phase'">
                     {{p.pod.status.phase}}
                 </td>
+                <td title="'Labels'" filter="{ labels: 'text'}" sortable="'pod.metadata.labels'">
+                    <i style="float: right;font-size: 14px" ng-click="editing = !editing;" class="fa fa-magic click_item"> </i>
+                    <br/>
+                    <labelformat json="p.pod.metadata.labels" fn="updateLabel" name="p.pod.metadata.name" rw="editing"/>
+                </td>
+
                 <td class="table-actions" title="'Actions'">
                     <a ng-click="editPressed=!editPressed;editPod(p.id, p.pod);" class="btn btn-info" title="Edit"> <i
                             class="fa fa-edit"></i></a>
@@ -92,10 +79,4 @@
             </tr>
         </table>
     </div>
-
-
-
-    </div>
-
-
 </section>
