--- a/views/partial/labelformat.html
+++ b/views/partial/labelformat.html
@@ -13,12 +13,12 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<section>
+<section >
 
-    <div class="labelSection">
+    <div class="labelSection" data-ng-show="rw">
         <div class="addLablel_div">
             <form class="">
-                <input class="form-control" type="text" ng-model="newLabel"/>
+                <input class="form-control" type="text" ng-model="newLabel" placeholder="key:value"/>
                 <button class="btn add_label_btn1 btn-mini" ng-click="addLabel(newLabel);">+</button>
                 <br/>
             </form>
@@ -26,13 +26,10 @@
     </div>
 
 
-
     <div  class="label-div" ng-repeat="(k, v) in labelJson">
         <div class="label_text"><span style="">{{k}} </span> : <span style="">{{v}}</span>
-            <i ng-click="removeLable(k)" class="fa fa-close"></i>
+            <i ng-click="removeLable(k)" ng-if="rw" class="fa fa-close"></i>
         </div>
     </div>
-
-
 
 </section>
